refactor: Alteração de melhoria no metodo ReservationInventoryAdapterOut.findAllByDocument